# representations-across-sizes

./: .gitignore  pyproject.toml
experiments/: 01_causal_trace.py  02_plot.ipynb  02_spread_across_sizes.py  03_01_intrinsic_dimensionality_all.ipynb  03_intrinsic_dimensionality.ipynb  03_intrinsic_dimensionality.py  make_graph.ipynb
results/: 1b.safetensors  3b.safetensors  8b.safetensors
scripts/: dadapy_id.py  extract_final_representations.py  get_intrinsic_dims.py  information_imbalance.py  precompute_distances.py
src/representations_across_sizes/: __init__.py  causal_tracing.py  experiment1.py  gride.py  lofty.code-workspace  tracing.py  utils.py
tests/: test_dirichlet.py  test_gride.py
