[project]
name = "representations-across-sizes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Loftus", email = "alexloftus2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nnsight>=0.3.6",
    "torch>=2.5.1",
    "torchtyping>=0.1.5",
    "transformers>=4.46.2",
]

[project.optional-dependencies]
ruff = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
